# aoc_2022

./: .gitignore  LICENSE  pyproject.toml
1/: meal_count.py
11/: monkey_business.py
12/: hill_climbing.py
15/: beacon_terror.py
17/: tetris.py
20/: decoding_coordinates.py
2021/1/: sonar_sweep.py
2021/2/: submarine.py
2022/: README.md
2022/12/: README.md  Untitled-1.py  export_data.py  hill_climbing.py
2022/13/: file_decoding.py
2022/14/: README.md  sand_sim.py
2022/15/: beacon_terror.py
2022/16/: valves.py
2022/18/: the_floor_is_lava.py
2022/19/: robots.py
2022/2/: rockpaperscissors.py
2022/21/: more_monkey_business.py
2022/22/: cubus.py
2022/22/data/: input.txt
2022/24/: README.md
2022/25/: snafu_numbers.py
2022/3/: rucksack.py
2022/7/: file_explorer.py
2022/7/data/: test_input.txt
2023/1/: trebuchet.py
2023/10/: pipemaze.py
2023/11/: expansion.py
2023/12/: hot_springs.py
2023/13/: mirrors.py
2023/14/: reflector.py
2023/15/: library.py
2023/16/: thefloorislava.py
2023/17/: clumsycrucible.py
2023/18/: lavalagoon.py
2023/19/: aplenty.py  test.py
2023/2/: cube.py
2023/21/: step_counter.py
2023/22/: bricksinthewall.py
2023/3/: gear.py
2023/4/: scratchcards.py
2023/5/: seeds.py
2023/6/: wait.py
2023/7/: camelcards.py
2023/8/: wasteland.py
2023/9/: mirage.py
22/: labyrinth.py
22/data/: input_path.txt
23/: elf_on_a_field.py
24/: blizzard_valley.py
4/: cleaning.py
5/: crate_stacking.py
6/: signal_buffering.py
8/: tree_house.py
9/: rope_physics.py
src/: map_2d.py
