[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = "coding for xmas"
authors = ["florian krempl"]
license = "mit"
readme = "README.md"
packages = [{include="*", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.2"
requests = "^2.28.1"
ipykernel = "^6.17.1"
networkx = "^2.8.8"
matplotlib = "^3.6.2"
numpy = "^1.23.5"
tdqm = "^0.0.1"
scipy = "^1.9.3"
pulp = "^2.7.0"
ortools = "^9.5.2237"
tqdm = "^4.64.1"
shapely = "^2.0.2"

[tool.poetry.group.dev.dependencies]
black = {version = "^22.12.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
